# task

./: .gitignore  main.py  pyproject.toml
agents/: inventory_agent.py  knowledge_agent.py  recommendation_agent.py  router_agent.py
api/endpoints/: agent.py  api_endpoints.py
chroma_db/61252843-cf05-42c8-8435-910b7bb97b2c/: index_metadata.pickle
db/: database.py
graph/: workflow.py
llm/: llm_config.py
models/: models.py
rag/: rag_pipeline.py
schemas/: mcp_schema.py  question_schema.py
state/: agentstate.py
